update code convention in ch04

--- a/4.TEXT_CLASSIFICATION/4.1.6 RNN Classification_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.1.6 RNN Classification_tf2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 모듈 불러오기"
+    "## 모듈 불러오기"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 시각화 함수"
+    "## 시각화 함수"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 학습 데이터 경로 정의 "
+    "## 학습 데이터 경로 정의 "
    ]
   },
   {
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 랜덤 시드 고정"
+    "## 랜덤 시드 고정"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 파일 로드"
+    "## 파일 로드"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 모델 하이퍼파라메터 정의"
+    "## 모델 하이퍼파라메터 정의"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 모델 선언 및 컴파일"
+    "## 모델 선언 및 컴파일"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Callback 선언"
+    "## Callback 선언"
    ]
   },
   {
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 모델 학습"
+    "## 모델 학습"
    ]
   },
   {
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 결과 플롯"
+    "## 결과 플롯"
    ]
   },
   {
@@ -359,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 테스트 데이터 불러오기"
+    "## 테스트 데이터 불러오기"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 베스트 모델 불러오기"
+    "## 베스트 모델 불러오기"
    ]
   },
   {
@@ -403,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 테스트 데이터 예측하기"
+    "## 테스트 데이터 예측하기"
    ]
   },
   {
