--- a/4.TEXT_CLASSIFICATION/4.1.7.CNN_Classification_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.1.7.CNN_Classification_tf2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1.7  CNN(Yoon Kim) 분류 모델"
+    "## 모듈 불러오기"
    ]
   },
   {
@@ -22,6 +22,7 @@
     "import pandas as pd\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "import os\n",
     "import json\n",
     "\n",
@@ -32,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 시각화"
+    "## 시각화 함수"
    ]
   },
   {
@@ -51,6 +52,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 학습 데이터 경로 정의"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_IN_PATH = './data_in/'\n",
+    "DATA_OUT_PATH = './data_out/'\n",
+    "TRAIN_INPUT_DATA = 'train_input.npy'\n",
+    "TRAIN_LABEL_DATA = 'train_label.npy'\n",
+    "DATA_CONFIGS = 'data_configs.json'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 랜덤 시드 고정"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -64,21 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 학습 데이터 파일 로드"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_IN_PATH = './data_in/'\n",
-    "DATA_OUT_PATH = './data_out/'\n",
-    "\n",
-    "TRAIN_INPUT_DATA = 'train_input.npy'\n",
-    "TRAIN_LABEL_DATA = 'train_label.npy'\n",
-    "DATA_CONFIGS = 'data_configs.json'"
+    "## 파일 로드"
    ]
   },
   {
@@ -88,32 +102,15 @@
    "outputs": [],
    "source": [
     "train_input = np.load(open(DATA_IN_PATH + TRAIN_INPUT_DATA, 'rb'))\n",
-    "train_input = pad_sequences(train_input, maxlen=train_input.shape[1])\n",
     "train_label = np.load(open(DATA_IN_PATH + TRAIN_LABEL_DATA, 'rb'))\n",
-    "prepro_configs = None\n",
-    "\n",
-    "with open(DATA_IN_PATH + DATA_CONFIGS, 'r') as f:\n",
-    "    prepro_configs = json.load(f)"
+    "prepro_configs = prepro_configs = json.load(open(DATA_IN_PATH + DATA_CONFIGS, 'r'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 모델 정의"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = 'cnn_classifier_eng'\n",
-    "BATCH_SIZE = 512\n",
-    "NUM_EPOCHS = 2\n",
-    "VALID_SPLIT = 0.1\n",
-    "MAX_LEN = train_input.shape[1]"
+    "## 모델 하이퍼파라메터 정의"
    ]
   },
   {
@@ -122,16 +119,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kargs = {'vocab_size': prepro_configs['vocab_size']+1,\n",
+    "model_name = 'cnn_classifier_en'\n",
+    "BATCH_SIZE = 512\n",
+    "NUM_EPOCHS = 2\n",
+    "VALID_SPLIT = 0.1\n",
+    "MAX_LEN = train_input.shape[1]\n",
+    "\n",
+    "kargs = {'model_name': model_name,\n",
+    "        'vocab_size': prepro_configs['vocab_size'],\n",
     "        'embedding_size': 128,\n",
     "        'num_filters': 100,\n",
     "        'dropout_rate': 0.5,\n",
     "        'hidden_dimension': 250,\n",
-    "        'output_dimension':1}\n",
-    "\n",
-    "# VOCAB_SIZE = prepro_configs['vocab_size']+1\n",
-    "\n",
-    "# print(len(prepro_configs['vocab']), VOCAB_SIZE) #check the number of vocab"
+    "        'output_dimension':1}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 모델 선언 및 컴파일"
    ]
   },
   {
@@ -143,7 +150,7 @@
     "class CNNClassifier(tf.keras.Model):\n",
     "    \n",
     "    def __init__(self, **kargs):\n",
-    "        super(CNNClassifier, self).__init__(name=model_name) # name=model name?\n",
+    "        super(CNNClassifier, self).__init__(name=kargs['model_name'])\n",
     "        self.embedding = layers.Embedding(input_dim=kargs['vocab_size'],\n",
     "                                     output_dim=kargs['embedding_size'])\n",
     "        self.conv_list = [layers.Conv1D(filters=kargs['num_filters'],\n",
@@ -178,10 +185,16 @@
    "outputs": [],
    "source": [
     "model = CNNClassifier(**kargs)\n",
-    "\n",
-    "model.compile(optimizer='adam',\n",
-    "              loss='binary_crossentropy',\n",
-    "              metrics=['accuracy'])"
+    "model.compile(optimizer=tf.keras.optimizers.Adam(),\n",
+    "              loss=tf.keras.losses.BinaryCrossentropy(),\n",
+    "              metrics=[tf.keras.metrics.BinaryAccuracy(name='accuracy')])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Callback 선언"
    ]
   },
   {
@@ -211,7 +224,7 @@
    ],
    "source": [
     "# overfitting을 막기 위한 ealrystop 추가\n",
-    "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001,patience=1)\n",
+    "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001,patience=2)\n",
     "# min_delta: the threshold that triggers the termination (acc should at least improve 0.0001)\n",
     "# patience: no improvment epochs (patience = 1, 1번 이상 상승이 없으면 종료)\\\n",
     "\n",
@@ -227,10 +240,31 @@
     "    \n",
     "\n",
     "cp_callback = ModelCheckpoint(\n",
-    "    checkpoint_path, monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=True)\n",
-    "\n",
+    "    checkpoint_path, monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 모델 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "history = model.fit(train_input, train_label, batch_size=BATCH_SIZE, epochs=NUM_EPOCHS,\n",
     "                    validation_split=VALID_SPLIT, callbacks=[earlystop_callback, cp_callback])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 결과 플롯"
    ]
   },
   {
@@ -283,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 테스트 데이터 불러오기"
+    "## 테스트 데이터 불러오기"
    ]
   },
   {
@@ -304,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 베스트 모델 불러오기"
+    "## 베스트 모델 불러오기"
    ]
   },
   {
@@ -322,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 테스트 데이터 예측하기"
+    "## 테스트 데이터 예측하기"
    ]
   },
   {
@@ -332,7 +366,7 @@
    "outputs": [],
    "source": [
     "predictions = model.predict(test_input, batch_size=BATCH_SIZE)\n",
-    "predictions = predictions.numpy()"
+    "predictions = predictions.squeeze(-1)"
    ]
   },
   {
@@ -367,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   },
   "pycharm": {
    "stem_cell": {
