--- a/4.TEXT_CLASSIFICATION/4.2.3.Korea Sentiment Modeling_tf2.ipynb
+++ b/4.TEXT_CLASSIFICATION/4.2.3.Korea Sentiment Modeling_tf2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 모듈 불러오기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -22,17 +29,14 @@
     "import os\n",
     "import json\n",
     "\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "SEED_NUM = 1234\n",
-    "tf.random.set_seed(SEED_NUM)"
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 시각화"
+    "## 시각화 함수"
    ]
   },
   {
@@ -54,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 학습 데이터 파일 로드"
+    "## 학습 데이터 경로 정의"
    ]
   },
   {
@@ -71,10 +75,40 @@
     "DATA_OUT_PATH = './data_out/'\n",
     "INPUT_TRAIN_DATA = 'nsmc_train_input.npy'\n",
     "LABEL_TRAIN_DATA = 'nsmc_train_label.npy'\n",
-    "DATA_CONFIGS = 'data_configs.json'\n",
-    "\n",
+    "DATA_CONFIGS = 'data_configs.json'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 랜덤 시드 고정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SEED_NUM = 1234\n",
+    "tf.random.set_seed(SEED_NUM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 파일 로드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_input = np.load(open(DATA_IN_PATH + INPUT_TRAIN_DATA, 'rb'))\n",
-    "train_input = pad_sequences(train_input, maxlen=train_input.shape[1])\n",
     "train_label = np.load(open(DATA_IN_PATH + LABEL_TRAIN_DATA, 'rb'))\n",
     "prepro_configs = json.load(open(DATA_IN_PATH + DATA_CONFIGS, 'r'))"
    ]
@@ -83,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 모델 정의"
+    "## 모델 하이퍼파라메터 정의"
    ]
   },
   {
@@ -98,16 +132,20 @@
     "VALID_SPLIT = 0.1\n",
     "MAX_LEN = train_input.shape[1]\n",
     "\n",
-    "kargs = {'vocab_size': prepro_configs['vocab_size'],\n",
+    "kargs = {'model_name': model_name,\n",
+    "        'vocab_size': prepro_configs['vocab_size'],\n",
     "        'embedding_size': 128,\n",
     "        'num_filters': 100,\n",
     "        'dropout_rate': 0.5,\n",
     "        'hidden_dimension': 250,\n",
-    "        'output_dimension':1}\n",
-    "\n",
-    "# VOCAB_SIZE = prepro_configs['vocab_size']+1\n",
-    "\n",
-    "# print(prepro_configs['vocab_size']), VOCAB_SIZE) #check the number of vocab"
+    "        'output_dimension':1}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 모델 선언 및 컴파일"
    ]
   },
   {
@@ -119,7 +157,7 @@
     "class CNNClassifier(tf.keras.Model):\n",
     "    \n",
     "    def __init__(self, **kargs):\n",
-    "        super(CNNClassifier, self).__init__(name=model_name) # name=model name?\n",
+    "        super(CNNClassifier, self).__init__(name=kargs['model_name'])\n",
     "        self.embedding = layers.Embedding(input_dim=kargs['vocab_size'],\n",
     "                                     output_dim=kargs['embedding_size'])\n",
     "        self.conv_list = [layers.Conv1D(filters=kargs['num_filters'],\n",
@@ -157,9 +195,16 @@
    "source": [
     "model = CNNClassifier(**kargs)\n",
     "\n",
-    "model.compile(optimizer='adam',\n",
-    "              loss='binary_crossentropy',\n",
-    "              metrics=['accuracy'])"
+    "model.compile(optimizer=tf.keras.optimizers.Adam(),\n",
+    "              loss=tf.keras.losses.BinaryCrossentropy(),\n",
+    "              metrics=[tf.keras.metrics.BinaryAccuracy(name='accuracy')])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Callback 선언"
    ]
   },
   {
@@ -187,7 +232,7 @@
    ],
    "source": [
     "# overfitting을 막기 위한 ealrystop 추가\n",
-    "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001,patience=1)\n",
+    "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001,patience=2)\n",
     "# min_delta: the threshold that triggers the termination (acc should at least improve 0.0001)\n",
     "# patience: no improvment epochs (patience = 1, 1번 이상 상승이 없으면 종료)\\\n",
     "\n",
@@ -203,10 +248,31 @@
     "    \n",
     "\n",
     "cp_callback = ModelCheckpoint(\n",
-    "    checkpoint_path, monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=True)\n",
-    "\n",
+    "    checkpoint_path, monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 모델 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "history = model.fit(train_input, train_label, batch_size=BATCH_SIZE, epochs=NUM_EPOCHS,\n",
     "                    validation_split=VALID_SPLIT, callbacks=[earlystop_callback, cp_callback])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 결과 플롯"
    ]
   },
   {
@@ -257,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 결과 평가하기"
+    "## 결과 평가하기"
    ]
   },
   {
@@ -330,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   },
   "pycharm": {
    "stem_cell": {
