update preprocess in ch6

--- a/6.CHATBOT/Test Preprocess.ipynb
+++ b/6.CHATBOT/Test Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,22 +30,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "char2idx, idx2char, vocab_size = load_vocabulary(PATH, VOCAB_PATH)"
+    "char2idx, idx2char, vocab_size = load_vocabulary(PATH, VOCAB_PATH, tokenize_as_morph=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:03<00:00,  5.33it/s]\n",
+      "100%|██████████| 20/20 [00:00<00:00, 166.84it/s]\n",
+      "100%|██████████| 20/20 [00:00<00:00, 70.65it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "index_inputs, input_seq_len = enc_processing(inputs, char2idx)\n",
-    "index_outputs, output_seq_len = dec_output_processing(outputs, char2idx)\n",
-    "index_targets = dec_target_processing(outputs, char2idx)"
+    "index_inputs, input_seq_len = enc_processing(inputs, char2idx, tokenize_as_morph=True)\n",
+    "index_outputs, output_seq_len = dec_output_processing(outputs, char2idx, tokenize_as_morph=True)\n",
+    "index_targets = dec_target_processing(outputs, char2idx, tokenize_as_morph=True)"
    ]
   },
   {
