--- a/5.TEXT_SIM/5.3.3_Quora_LSTM.ipynb
+++ b/5.TEXT_SIM/5.3.3_Quora_LSTM.ipynb
@@ -1,252 +1,328 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "bG4_-K7Z6aub"
+   },
+   "source": [
+    "# 모듈 불러오기"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "ixJi5iWk6VzH"
+   },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
     "import os\n",
+    "import json\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "import json"
+    "import tensorflow as tf\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initial global var"
+    "# 시각화 함수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 미리 Global 변수를 지정하자. 파일 명, 파일 위치, 디렉토리 등이 있다.\n",
-    "\n",
+    "def plot_graphs(history, string):\n",
+    "    plt.plot(history.history[string])\n",
+    "    plt.plot(history.history['val_'+string], '')\n",
+    "    plt.xlabel(\"Epochs\")\n",
+    "    plt.ylabel(string)\n",
+    "    plt.legend([string, 'val_'+string])\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 학습 데이터 파일 로드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "DATA_IN_PATH = './data_in/'\n",
     "DATA_OUT_PATH = './data_out/'\n",
-    "\n",
     "TRAIN_Q1_DATA_FILE = 'train_q1.npy'\n",
     "TRAIN_Q2_DATA_FILE = 'train_q2.npy'\n",
     "TRAIN_LABEL_DATA_FILE = 'train_label.npy'\n",
-    "DATA_CONFIGS = 'data_configs.json'\n",
-    "\n",
-    "## 학습에 필요한 파라메터들에 대해서 지정하는 부분이다.\n",
-    "\n",
-    "BATCH_SIZE = 16\n",
-    "EPOCH = 2\n",
-    "HIDDEN = 64\n",
-    "BUFFER_SIZE = 10000\n",
-    "\n",
-    "NUM_LAYERS = 3\n",
-    "DROPOUT_RATIO = 0.3\n",
-    "\n",
-    "TEST_SPLIT = 0.1\n",
-    "RNG_SEED = 13371447\n",
-    "EMBEDDING_DIM = 128\n",
-    "MAX_SEQ_LEN = 31"
+    "DATA_CONFIGS = 'data_configs.json'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load Dataset"
+    "# 랜덤 시드 고정"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 데이터를 불러오는 부분이다. 효과적인 데이터 불러오기를 위해, 미리 넘파이 형태로 저장시킨 데이터를 로드한다.\n",
-    "\n",
+    "SEED_NUM = 1234\n",
+    "tf.random.set_seed(SEED_NUM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 파일 로드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "q1_data = np.load(open(DATA_IN_PATH + TRAIN_Q1_DATA_FILE, 'rb'))\n",
     "q2_data = np.load(open(DATA_IN_PATH + TRAIN_Q2_DATA_FILE, 'rb'))\n",
     "labels = np.load(open(DATA_IN_PATH + TRAIN_LABEL_DATA_FILE, 'rb'))\n",
-    "prepro_configs = None\n",
-    "\n",
-    "with open(DATA_IN_PATH + DATA_CONFIGS, 'r') as f:\n",
-    "    prepro_configs = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VOCAB_SIZE = prepro_configs['vocab_size']"
+    "prepro_configs = json.load(open(DATA_IN_PATH + DATA_CONFIGS, 'r'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Split train and test dataset"
+    "# 모델 하이퍼파라메터 정의"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "q1_data_len = np.array([min(len(x), MAX_SEQ_LEN) for x in q1_data])\n",
-    "q2_data_len = np.array([min(len(x), MAX_SEQ_LEN) for x in q2_data])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## 데이터를 나누어 저장하자. sklearn의 train_test_split을 사용하면 유용하다. 하지만, 쿼라 데이터의 경우는\n",
-    "## 입력이 1개가 아니라 2개이다. 따라서, np.stack을 사용하여 두개를 하나로 쌓은다음 활용하여 분류한다.\n",
+    "model_name = 'malstm_similarity'\n",
+    "BATCH_SIZE = 128\n",
+    "NUM_EPOCHS = 5\n",
+    "VALID_SPLIT = 0.1\n",
     "\n",
-    "X = np.stack((q1_data, q2_data), axis=1)\n",
-    "y = labels\n",
-    "train_X, test_X, train_y, test_y = train_test_split(X, y, test_size=TEST_SPLIT, random_state=RNG_SEED)\n",
-    "\n",
-    "train_Q1 = train_X[:,0]\n",
-    "train_Q2 = train_X[:,1]\n",
-    "test_Q1 = test_X[:,0]\n",
-    "test_Q2 = test_X[:,1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rearrange(base, hypothesis, labels):\n",
-    "    features = {\"base\": base, \"hypothesis\": hypothesis}\n",
-    "    return features, labels\n",
-    "\n",
-    "def train_input_fn():\n",
-    "    dataset = tf.data.Dataset.from_tensor_slices((train_Q1, train_Q2, train_y))\n",
-    "    dataset = dataset.shuffle(buffer_size=len(train_Q1))\n",
-    "    dataset = dataset.batch(BATCH_SIZE)\n",
-    "    dataset = dataset.map(rearrange)\n",
-    "    dataset = dataset.repeat(EPOCH)\n",
-    "    iterator = dataset.make_one_shot_iterator()\n",
-    "    \n",
-    "    return iterator.get_next()\n",
-    "\n",
-    "def eval_input_fn():\n",
-    "    dataset = tf.data.Dataset.from_tensor_slices((test_Q1, test_Q2, test_y))\n",
-    "    dataset = dataset.batch(BATCH_SIZE)\n",
-    "    dataset = dataset.map(rearrange)\n",
-    "    iterator = dataset.make_one_shot_iterator()\n",
-    "    \n",
-    "    return iterator.get_next()"
+    "kargs = {\n",
+    "    'vocab_size': prepro_configs['vocab_size'],\n",
+    "    'embedding_dimension': 100,\n",
+    "    'lstm_dimension': 150,\n",
+    "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "colab_type": "text",
+    "id": "nvXOXlSywPR2"
+   },
    "source": [
-    "# Model setup"
+    "# 모델 선언 및 컴파일"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Malstm(features, labels, mode):\n",
+    "class MaLSTM(tf.keras.Model):\n",
+    "    \n",
+    "    def __init__(self, **kargs):\n",
+    "        super(MaLSTM, self).__init__(name=model_name)\n",
+    "        self.embedding = layers.Embedding(input_dim=kargs['vocab_size'],\n",
+    "                                     output_dim=kargs['embedding_dimension'])\n",
+    "        self.lstm = layers.LSTM(units=kargs['lstm_dimension'])\n",
     "        \n",
-    "    TRAIN = mode == tf.estimator.ModeKeys.TRAIN\n",
-    "    EVAL = mode == tf.estimator.ModeKeys.EVAL\n",
-    "    PREDICT = mode == tf.estimator.ModeKeys.PREDICT\n",
-    "            \n",
-    "    embedding = tf.keras.layers.Embedding(VOCAB_SIZE, EMBEDDING_DIM)\n",
-    "    \n",
-    "    base_embedded_matrix = embedding(features['base'])\n",
-    "    hypothesis_embedded_matrix = embedding(features['hypothesis'])\n",
-    "    \n",
-    "    # Question 1에 대한 LSTM모델\n",
-    "    q_lstm_fw_cell = tf.nn.rnn_cell.BasicLSTMCell(num_units = 64, activation = tf.nn.tanh)\n",
-    "    q_lstm_bw_cell = tf.nn.rnn_cell.BasicLSTMCell(num_units = 64, activation = tf.nn.tanh)\n",
-    "    _, q_output_states = tf.nn.bidirectional_dynamic_rnn(cell_fw = q_lstm_fw_cell,\n",
-    "                                                       cell_bw = q_lstm_bw_cell,\n",
-    "                                                       inputs = base_embedded_matrix,\n",
-    "                                                       dtype = tf.float32,\n",
-    "                                                      scope='query')\n",
-    "    # 마지막 state 값을 뽑아 추출한다\n",
-    "    q_final_state = tf.concat([q_output_states[0].h, q_output_states[1].h], axis=1)\n",
-    "\n",
-    "    # Question 2 (유사한 쿼리)에 대한 LSTM모델\n",
-    "    s_lstm_fw_cell = tf.nn.rnn_cell.BasicLSTMCell(num_units = 64, activation = tf.nn.tanh)\n",
-    "    s_lstm_bw_cell = tf.nn.rnn_cell.BasicLSTMCell(num_units = 64, activation = tf.nn.tanh)\n",
-    "    _, s_output_states = tf.nn.bidirectional_dynamic_rnn(cell_fw = s_lstm_fw_cell,\n",
-    "                                                       cell_bw = s_lstm_bw_cell,\n",
-    "                                                       inputs = hypothesis_embedded_matrix,\n",
-    "                                                        dtype = tf.float32,\n",
-    "                                                      scope='sim_query')\n",
-    "    #LSTM의 마지막 state 값을 추출한다.\n",
-    "    sim_final_state = tf.concat([s_output_states[0].h, s_output_states[1].h], axis=1)\n",
+    "    def call(self, x):\n",
+    "        x1, x2 = x\n",
+    "        x1 = self.embedding(x1)\n",
+    "        x2 = self.embedding(x2)\n",
+    "        x1 = self.lstm(x1)\n",
+    "        x2 = self.lstm(x2)\n",
+    "        x = tf.exp(-tf.reduce_sum(tf.abs(x1 - x2), axis=1))\n",
     "        \n",
-    "#     merged_matrix = tf.concat([base_sementic_matrix, hypothesis_sementic_matrix], -1)\n",
-    "#     logit_layer = tf.keras.layers.dot([base_sementic_matrix, hypothesis_sementic_matrix], axes=1, normalize=True)    \n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MaLSTM(**kargs)\n",
     "\n",
-    "    with tf.variable_scope('output_layer'):\n",
-    "#     logit_layer = K.exp(-K.sum(K.abs(base_sementic_matrix - hypothesis_sementic_matrix), axis=1, keepdims=True))\n",
-    "        logit_layer = tf.exp(-tf.reduce_sum(tf.abs(q_final_state - sim_final_state), axis=1, keepdims=True))\n",
-    "        logit_layer = tf.squeeze(logit_layer, axis=-1)\n",
-    "                \n",
-    "    if PREDICT:\n",
-    "        return tf.estimator.EstimatorSpec(\n",
-    "                  mode=mode,\n",
-    "                  predictions={\n",
-    "                      'is_duplicate':logit_layer\n",
-    "                  })\n",
-    "    \n",
-    "    #prediction 진행 시, None\n",
-    "    if labels is not None:\n",
-    "        labels = tf.to_float(labels)\n",
-    "    \n",
-    "#     loss = tf.reduce_mean(tf.keras.metrics.binary_crossentropy(y_true=labels, y_pred=logit_layer))\n",
-    "    loss = tf.losses.mean_squared_error(labels=labels, predictions=logit_layer)\n",
-    "#     loss = tf.reduce_mean(tf.losses.sigmoid_cross_entropy(labels, logit_layer))\n",
-    "    \n",
-    "    if EVAL:\n",
-    "        accuracy = tf.metrics.accuracy(labels, tf.round(logit_layer))\n",
-    "        eval_metric_ops = {'acc': accuracy}\n",
-    "        return tf.estimator.EstimatorSpec(\n",
-    "                  mode=mode,\n",
-    "                  eval_metric_ops= eval_metric_ops,\n",
-    "                  loss=loss)\n",
-    "\n",
-    "    elif TRAIN:\n",
-    "\n",
-    "        global_step = tf.train.get_global_step()\n",
-    "        train_op = tf.train.AdamOptimizer(1e-3).minimize(loss, global_step)\n",
-    "\n",
-    "        return tf.estimator.EstimatorSpec(\n",
-    "                  mode=mode,\n",
-    "                  train_op=train_op,\n",
-    "                  loss=loss)"
+    "model.compile(optimizer=tf.keras.optimizers.Adam(1e-3),\n",
+    "              loss=tf.keras.losses.BinaryCrossentropy(),\n",
+    "              metrics=[tf.keras.metrics.BinaryAccuracy(name='accuracy')])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training & Eval"
+    "# Callback 선언"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data_out/malstm_similarity -- Folder already exists \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# overfitting을 막기 위한 ealrystop 추가\n",
+    "earlystop_callback = EarlyStopping(monitor='val_accuracy', min_delta=0.0001, patience=1)\n",
+    "# min_delta: the threshold that triggers the termination (acc should at least improve 0.0001)\n",
+    "# patience: no improvment epochs (patience = 1, 1번 이상 상승이 없으면 종료)\\\n",
+    "\n",
+    "checkpoint_path = DATA_OUT_PATH + model_name + '/weights.h5'\n",
+    "checkpoint_dir = os.path.dirname(checkpoint_path)\n",
+    "\n",
+    "# Create path if exists\n",
+    "if os.path.exists(checkpoint_dir):\n",
+    "    print(\"{} -- Folder already exists \\n\".format(checkpoint_dir))\n",
+    "else:\n",
+    "    os.makedirs(checkpoint_dir, exist_ok=True)\n",
+    "    print(\"{} -- Folder create complete \\n\".format(checkpoint_dir))\n",
+    "    \n",
+    "\n",
+    "cp_callback = ModelCheckpoint(\n",
+    "    checkpoint_path, monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 모델 학습"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit((q1_data, q2_data), labels, batch_size=BATCH_SIZE, epochs=NUM_EPOCHS,\n",
+    "                    validation_split=VALID_SPLIT, callbacks=[earlystop_callback, cp_callback])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 결과 플롯"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_graphs(history, 'loss')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_graphs(history, 'accuracy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 테스트 데이터 불러오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "GLab41oLQSQV"
+   },
+   "outputs": [],
+   "source": [
+    "TEST_Q1_DATA_FILE = 'test_q1.npy'\n",
+    "TEST_Q2_DATA_FILE = 'test_q2.npy'\n",
+    "TEST_ID_DATA_FILE = 'test_id.npy'\n",
+    "\n",
+    "test_q1_data = np.load(open(DATA_IN_PATH + TEST_Q1_DATA_FILE, 'rb'))\n",
+    "test_q2_data = np.load(open(DATA_IN_PATH + TEST_Q2_DATA_FILE, 'rb'))\n",
+    "test_id_data = np.load(open(DATA_IN_PATH + TEST_ID_DATA_FILE, 'rb'), allow_pickle=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 베스트 모델 불러오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVE_FILE_NM = 'weights.h5'\n",
+    "model.load_weights(os.path.join(DATA_OUT_PATH, model_name, SAVE_FILE_NM))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 베스트 데이터 예측하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.predict((test_q1_data, test_q2_data), batch_size=BATCH_SIZE)"
    ]
   },
   {
@@ -257,85 +333,18 @@
    },
    "outputs": [],
    "source": [
-    "# os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\" #For TEST  \n",
-    "\n",
-    "model_dir = os.path.join(os.getcwd(), DATA_OUT_PATH + \"/checkpoint/rnn/\")\n",
-    "os.makedirs(model_dir, exist_ok=True)\n",
-    "\n",
-    "config_tf = tf.estimator.RunConfig(save_checkpoints_steps=500,\n",
-    "                                save_checkpoints_secs=None,\n",
-    "                                  keep_checkpoint_max=2,\n",
-    "                                  log_step_count_steps=200)\n",
-    "\n",
-    "lstm_est = tf.estimator.Estimator(Malstm, model_dir=model_dir, config=config_tf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lstm_est.train(train_input_fn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lstm_est.evaluate(eval_input_fn)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Load test dataset & create submit dataset to kaggle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TEST_Q1_DATA_FILE = 'test_q1.npy'\n",
-    "TEST_Q2_DATA_FILE = 'test_q2.npy'\n",
-    "TEST_ID_DATA_FILE = 'test_id.npy'\n",
-    "\n",
-    "test_q1_data = np.load(open(DATA_IN_PATH + TEST_Q1_DATA_FILE, 'rb'))\n",
-    "test_q2_data = np.load(open(DATA_IN_PATH + TEST_Q2_DATA_FILE, 'rb'))\n",
-    "test_id_data = np.load(open(DATA_IN_PATH + TEST_ID_DATA_FILE, 'rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predict_input_fn = tf.estimator.inputs.numpy_input_fn(x={\"base\":test_q1_data, \n",
-    "                                                         \"hypothesis\":test_q2_data}, \n",
-    "                                                      shuffle=False)\n",
-    "predictions = np.array([p['is_duplicate'] for p in lstm_est.predict(input_fn=predict_input_fn)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(predictions)) #2345796\n",
-    "\n",
     "output = pd.DataFrame( data={\"test_id\":test_id_data, \"is_duplicate\": list(predictions)} )\n",
-    "output.to_csv( \"rnn_predict.csv\", index=False, quoting=3 )"
+    "output.to_csv(DATA_OUT_PATH+\"rnn_predict.csv\", index=False, quoting=3)"
    ]
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "Day4_2_Ma_LSTM.ipynb",
+   "provenance": [],
+   "version": "0.3.2"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -355,5 +364,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
